<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:clickable="true"
    android:background="?android:selectableItemBackground"
    android:layout_height="wrap_content">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:background="?android:selectableItemBackground"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gestion"
        android:id="@+id/txt_gestion"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|right"
        android:paddingRight="10dp"
        android:textColor="#AAA4A4"
        android:textSize="12dp"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:layout_below="@+id/txt_gestion"
        android:id="@+id/txt_name"
        android:paddingLeft="10dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cedula"
        android:id="@+id/txt_cedula"
        android:layout_below="@+id/txt_name"
        android:paddingLeft="10dp"
        android:textColor="#776D6D"
        android:textSize="14dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/direction"
        android:layout_below="@+id/txt_cedula"
        android:id="@+id/txt_direction"
        android:paddingLeft="10dp"
        android:textColor="#8E8484"
        android:textSize="16dp" />

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/barrio"
        android:layout_below="@+id/txt_direction"
        android:id="@+id/txt_barrio"
        android:paddingLeft="10dp"
        android:textColor="#8E8484"
        android:textSize="16dp" />-->

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/status_img"
        android:src="@drawable/ic_action_save"
        android:layout_below="@+id/txt_gestion"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:id="@+id/location_img"
        android:layout_below="@+id/txt_gestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/txt_cedula"
        android:src="@drawable/user_location"
        android:scaleType="fitCenter" />

</RelativeLayout>
</android.support.v7.widget.CardView>